# a-boolean-affair-mastermind

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  requirements.txt
app/: app_context.py  constants.py  main.py
app/models/: game.py  guess.py  player.py  rules.py
app/repositories/: game.py  game_storage.py  player.py
app/routers/: game.py  guess.py  player.py
app/services/: app_context.py  game.py  player.py  random.py  random_service.py
app/storages/: game.py  player.py
app/utils/: mappers.py  validators.py
docs/: SETUP_AND_GUIDE.md
tests/: test_player_router.py  test_rule.py  test_rules.py
