[project]
name = "a-boolean-affair"
authors = [
    {name = "Lisa Chen", email = "lisa.hl.chen@gmail.com"}
]
version = "0.1.0"
description = "Add your description here" # TODO fill out description
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ruff==0.12.8",
    "uvicorn==0.35.0",
    "fastapi[standard]==0.113.0",
    "pydantic==2.8.0",
    "ruff==0.12.8",
    "requests==2.32.4",
]

[tool.ruff.format]
indent-style = "tab"
