[project]
name = "a-boolean-affair"
authors = [
    {name = "Lisa Chen", email = "lisa.hl.chen@gmail.com"}
]
version = "0.1.0"
description = "A FastAPI-based Mastermind-style guessing game"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "uvicorn==0.35.0",
    "fastapi[standard]==0.116.1",
    "pydantic==2.11.7",
    "requests==2.32.4",
    "logging==0.4.9.6",
    "python-dotenv==1.1.1",
    "ruff==0.12.9",
    "pytest==8.4.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
indent-style = "tab"
skip-magic-trailing-comma=true

[tool.ruff.lint.pep8-naming]
ignore-names = ["GameCreate, GameBase"]
